# binary-alchemy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
_agents/: AGENT_evaluator.md  AGENT_experimenter.md  AGENT_researcher.md
_prompts/: PROMPT_benchmark.md  PROMPT_experiment.md  PROMPT_roundtrip.md  PROMPT_survey.md
_skills/: SKILL-001_survey.md  SKILL-002_experiment.md  SKILL-003_benchmark.md  SKILL-004_round-trip.md
docs/: MOC_master.md
docs/survey/: SRV-001_nova.md  SRV-002_supercoder.md  SRV-003_llm-compiler.md  SRV-004_llm4decompile.md  SRV-005_sk2decompile.md  SRV-006_clap.md  SRV-007_ghidrassist.md  SRV-008_formai.md  SRV-009_metamorphic-testing.md  SRV-010_formal-verification.md  SRV-011_ai-bom.md
tools/: compile_chain.py  eval_metrics.py  model_runner.py  render_view.py
